--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,32 +23,31 @@
     </div>
   </div>
 </nav>
-<div class="container justify-content-center">
-<div class="row">
-  <video id="video" [style.display]="showcamera ? null : 'none'">Video stream not available.</video>
-  <canvas id="mycanvas" [style.display]="showCropper? null : 'none'"></canvas>
-  <video autoplay playsinline id="videoLive" [style.display]="showvideo || stopvideo? null : 'none' "></video>
-  <video controls playsinline id="videoRecorded" [style.display]="showvideoRecorded ? null : 'none' "></video>
-  <img id="myFilecanvas" [style.display]="fileToUpload && showUpload? null : 'none'" class="img-fluid py-1" />
+<div class="container ">
+<div class="contentarea">
+  <video  class="col-sm" id="video" [style.display]="showcamera ? null : 'none'">Video stream not available.</video>
+  <canvas   class="col-sm" id="mycanvas" [style.display]="showCropper? null : 'none'"></canvas>
+  <video  class="col-sm" autoplay playsinline id="videoLive" [style.display]="showvideo || stopvideo? null : 'none' "></video>
+  <video  class="col-sm" controls playsinline id="videoRecorded" [style.display]="showvideoRecorded ? null : 'none' "></video>
+  <img  class="col-sm" id="myFilecanvas" [style.display]="fileToUpload && showUpload? null : 'none'" class="img-fluid py-1" />
 </div>
-  <div class="row  py-1">
-    <form class="col-sm " [style.display]="showUpload ? null : 'none' ">
+<div class="d-flex gap-2 justify-content-center">
+    <form  [style.display]="showUpload ? null : 'none' ">
       <input type="file" (change)="fileChangeEvent($event)" />
     </form>
-    <div class="col-sm " [style.display]="fileToUpload && showUpload  ? null : 'none'">
+    <div  [style.display]="fileToUpload && showUpload  ? null : 'none'">
       <div class="input-group py-1" >
         <input type="text" [ngModel]="barcode" name="ReadBarcode1" class="form-control" placeholder="No barcode">
         <button type="button" class="btn btn-secondary" (click)="ReadBarcodeFromImageFile()">Read Barcode</button>
       </div>
     </div>
-
-    <button class="col-sm btn btn-secondary rounded-pill px-3"
-      [style.display]="mediaDevices.length > 1 &&(showcamera || showvideo) ? null : 'none' ">Switch cam</button>
-    <button class="col-sm btn btn-secondary rounded-pill px-3" (click)="takepicture()"
+    <button class="btn btn-secondary rounded-pill px-3" (click)="switchCam()" >Switch cam</button>
+    <!-- <button class="btn btn-secondary rounded-pill px-3" [style.display]="mediaDevices.length > 1 &&(showcamera || showvideo) ? null : 'none' ">Switch cam</button> -->
+    <button class="btn btn-secondary  rounded-pill px-3" (click)="takepicture()"
       [style.display]="showcamera ? null : 'none' ">Take photo</button>
-    <button class="col-sm btn btn-secondary rounded-pill px-3" (click)="discardpicture()"
+    <button class="btn btn-secondary rounded-pill px-3" (click)="discardpicture()"
       [style.display]="showCropper? null : 'none'">New photo</button>
-    <div  class="col-sm " [style.display]="showCropper ? null : 'none'">
+    <div   [style.display]="showCropper ? null : 'none'">
 
       <div class="input-group py-1" >
         <input type="text" [ngModel]="barcode" name="ReadBarcode2" class="form-control" placeholder="No code">
@@ -57,13 +56,14 @@
 
     </div>
 
-    <button class="col-sm btn btn-secondary rounded-pill px-3" (click)="startvideo()"
+    <button class=" btn btn-secondary rounded-pill px-3" (click)="startvideo()"
       [style.display]="showvideo ? null : 'none' ">start video</button>
-    <button class="col-sm btn btn-secondary rounded-pill px-3" (click)="stopvideoRecording()"
+    <button class=" btn btn-secondary rounded-pill px-3" (click)="stopvideoRecording()"
       [style.display]="stopvideo ? null : 'none' ">stop video</button>
-    <button class="col-sm btn btn-secondary rounded-pill px-3" (click)="uploadVideo()"
+    <button class=" btn btn-secondary rounded-pill px-3" (click)="uploadVideo()"
       [style.display]="showvideoRecorded ? null : 'none' ">Upload video</button>
-    <button class="col-sm btn btn-secondary rounded-pill px-3" (click)="discardvideo()"
+    <button class=" btn btn-secondary rounded-pill px-3" (click)="discardvideo()"
       [style.display]="showvideoRecorded? null : 'none'">new video</button>
   </div>
+  
 </div>
