--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,73 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-body-tertiary py-0">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
-      aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" (click)="allowCamera()">Fotocamera</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="allowVideo()">Video</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="AllowUpload()">Immagine </a>
-        </li>
-      </ul>
-      <!-- <select id="select" [(ngModel)]="selectedDevice">
-        <option *ngFor="let c of mediaDevices" [ngValue]="c">{{c.label}}</option>
-      </select> -->
 
-    </div>
-  </div>
-</nav>
-<div class="container ">
-<div class="contentarea">
-  <video  class="col-sm" id="video" [style.display]="showcamera ? null : 'none'">Video stream not available.</video>
-  <canvas   class="col-sm" id="mycanvas" [style.display]="showCropper? null : 'none'"></canvas>
-  <video  class="col-sm" autoplay playsinline id="videoLive" [style.display]="showvideo || stopvideo? null : 'none' "></video>
-  <video  class="col-sm" controls playsinline id="videoRecorded" [style.display]="showvideoRecorded ? null : 'none' "></video>
-  <img  class="col-sm" id="myFilecanvas" [style.display]="fileToUpload && showUpload? null : 'none'" class="img-fluid py-1" />
-</div>
-<div class="d-flex gap-2 justify-content-center">
-    <form  [style.display]="showUpload ? null : 'none' ">
-      <input type="file" (change)="fileChangeEvent($event)" />
-    </form>
-   
-    <button class="btn btn-secondary rounded-pill px-3" (click)="switchCam()" [style.display]="mediaDevices.length > 1 &&(showcamera || showvideo) ? null : 'none' ">Switch cam
-
-    </button>
-    <!-- <button class="btn btn-secondary rounded-pill px-3" [style.display]="mediaDevices.length > 1 &&(showcamera || showvideo) ? null : 'none' ">Switch cam</button> -->
-    <button class="btn btn-secondary  rounded-pill px-3" (click)="takepicture()"
-      [style.display]="showcamera ? null : 'none' ">Take photo</button>
-    <button class="btn btn-secondary rounded-pill px-3" (click)="discardpicture()"
-      [style.display]="showCropper? null : 'none'">New photo</button>
-   
-
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="startvideo()"
-      [style.display]="showvideo ? null : 'none' ">start video</button>
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="stopvideoRecording()"
-      [style.display]="stopvideo ? null : 'none' ">stop video</button>
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="uploadVideo()"
-      [style.display]="showvideoRecorded ? null : 'none' ">Upload video</button>
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="discardvideo()"
-      [style.display]="showvideoRecorded? null : 'none'">new video</button>
-  </div>
-  <div  [style.display]="fileToUpload && showUpload  ? null : 'none'">
-    <div class="input-group py-1" >
-      <input type="text" [ngModel]="barcode" name="ReadBarcode1" class="form-control" placeholder="No barcode">
-      <button type="button" class="btn btn-secondary" (click)="ReadBarcodeFromImageFile()">Read Barcode</button>
-    </div>
-  </div>
-
-  <div   [style.display]="showCropper ? null : 'none'">
-
-    <div class="input-group py-1" >
-      <input type="text" [ngModel]="barcode" name="ReadBarcode2" class="form-control" placeholder="No code">
-      <button type="button" class="btn btn-secondary" (click)="ReadBarcode()">Read Barcode</button>
-    </div>
-
-  </div>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
