--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="jumbotron p-4">
-  <div class="container text-center">
+<div class="jumbotron text-center">
+
 
       <router-outlet></router-outlet>
 
-  </div>
+
   <app-notification></app-notification>
 </div>
