--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,25 @@
-<nav class="navbar navbar-expand-sm bg-body-tertiary py-0">
+
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
     aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav me-auto">
       <li class="nav-item active">
-        <a class="nav-link" (click)="allowCamera()">Fotocamera</a>
+        <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="allowCamera()">Fotocamera</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="allowVideo()">Video</a>
+        <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"  (click)="allowVideo()">Video</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="AllowUpload()">Immagine </a>
+        <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="AllowUpload()">Immagine </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-bs-toggle="collapse"  (click)="logout()">Logout </a>
       </li>
     </ul>
     <!-- <select id="select" [(ngModel)]="selectedDevice">
@@ -21,81 +27,129 @@
         </select> -->
 
   </div>
-  <div class="nav justify-content-end">
-    <a class="nav-link" (click)="logout()">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left"
-        viewBox="0 0 16 16">
-        <path fill-rule="evenodd"
-          d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z" />
-        <path fill-rule="evenodd"
-          d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z" />
-      </svg>
-      Logout
-    </a>
 
-  </div>
 </nav>
 
 
-<div class="container px-4 py-1 ">
+<div class="container ">
 
 
   <div class="row justify-content-center">
 
-    <video  id="video" [style.display]="showcamera ? null : 'none'"  [width]="width" [height]="height">Video stream
+    <video id="video" [style.display]="showcamera ? null : 'none'" class="video1">
+      <style>
+        iframe{
+          border: none;
+        }
+      </style>
+      Video stream
       not available.</video>
-    <canvas  id="mycanvas" [style.display]="showCropper? null : 'none'"></canvas>
-    <video autoplay playsinline id="videoLive"  [style.max-width.px]="width" [style.max-height.px]="height"
+    <canvas id="mycanvas" [style.display]="showCropper? null : 'none'"></canvas>
+
+    <video autoplay playsinline id="videoLive" [style.max-width.px]="width" [style.max-height.px]="height"
       [style.display]="showvideo || stopvideo? null : 'none' "></video>
-    <video  controls playsinline id="videoRecorded"
-      [style.display]="showvideoRecorded ? null : 'none' "></video>
-    <img  id="myFilecanvas" [style.display]="fileToUpload && showUpload? null : 'none'"
-      class="img-fluid py-1" />
-</div>  
+    <video controls playsinline id="videoRecorded" [style.display]="showvideoRecorded ? null : 'none' "></video>
+    <img id="myFilecanvas" [style.display]="fileToUpload && showUpload? null : 'none'" class="img-fluid py-1" />
+  </div>
 
   <div class="d-flex gap-2 justify-content-center">
-    
-    <form [style.display]="showUpload ? null : 'none' ">
-      <input type="file" (change)="fileChangeEvent($event)" />
+
+    <form hidden>
+      <input id="myfileInput" type="file" (change)="fileChangeEvent($event)" />
     </form>
 
-    <button class="btn btn-secondary rounded-pill px-3" (click)="switchCam()"
-      [style.display]="mediaDevices.length > 1 &&(showcamera || showvideo) ? null : 'none' ">Switch cam
-
-    </button>
-    <!-- <button class="btn btn-secondary rounded-pill px-3" [style.display]="mediaDevices.length > 1 &&(showcamera || showvideo) ? null : 'none' ">Switch cam</button> -->
-    <button class="btn btn-secondary  rounded-pill px-3" (click)="takepicture()"
-      [style.display]="showcamera ? null : 'none' ">Take photo</button>
-    <button class="btn btn-secondary rounded-pill px-3" (click)="discardpicture()"
-      [style.display]="showCropper? null : 'none'">New photo</button>
+    <input type="text" [ngModel]="barcode" name="ReadBarcode1" class="form-control" placeholder="No barcode"
+      [style.display]="showBarcode ? null : 'none'">
 
 
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="startvideo()"
-      [style.display]="showvideo ? null : 'none' ">start video</button>
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="stopvideoRecording()"
-      [style.display]="stopvideo ? null : 'none' ">stop video</button>
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="uploadVideo()"
-      [style.display]="showvideoRecorded ? null : 'none' ">Upload video</button>
-    <button class=" btn btn-secondary rounded-pill px-3" (click)="discardvideo()"
-      [style.display]="showvideoRecorded? null : 'none'">new video</button>
+    <a class="link-secondary" (click)="switchCam()"
+      [style.display]="mediaDevices.length > 1 &&(showcamera || showvideo) ? null : 'none' ">
+      <svg fill="none" height="20" viewBox="0 0 20 20" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M14.8536 2.14645C14.6583 1.95118 14.3417 1.95118 14.1464 2.14645C13.9512 2.34171 13.9512 2.65829 14.1464 2.85355L15.2929 4H4C2.89543 4 2 4.89543 2 6V12.5C2 12.7761 2.22386 13 2.5 13C2.77614 13 3 12.7761 3 12.5V6C3 5.44772 3.44772 5 4 5H15.2929L14.1464 6.14645C13.9512 6.34171 13.9512 6.65829 14.1464 6.85355C14.3417 7.04882 14.6583 7.04882 14.8536 6.85355L16.8536 4.85355C17.0488 4.65829 17.0488 4.34171 16.8536 4.14645L14.8536 2.14645ZM16 15C16.5523 15 17 14.5523 17 14V7.5C17 7.22386 17.2239 7 17.5 7C17.7761 7 18 7.22386 18 7.5V14C18 15.1046 17.1046 16 16 16H4.70711L5.85355 17.1464C6.04882 17.3417 6.04882 17.6583 5.85355 17.8536C5.65829 18.0488 5.34171 18.0488 5.14645 17.8536L3.14645 15.8536C2.95118 15.6583 2.95118 15.3417 3.14645 15.1464L5.14645 13.1464C5.34171 12.9512 5.65829 12.9512 5.85355 13.1464C6.04882 13.3417 6.04882 13.6583 5.85355 13.8536L4.70711 15H16ZM13 10C13 11.6569 11.6569 13 10 13C8.34315 13 7 11.6569 7 10C7 8.34315 8.34315 7 10 7C11.6569 7 13 8.34315 13 10ZM12 10C12 8.89543 11.1046 8 10 8C8.89543 8 8 8.89543 8 10C8 11.1046 8.89543 12 10 12C11.1046 12 12 11.1046 12 10Z"
+          fill="#212121" />
+      </svg>
+    </a>   
+
+    <a class="link-secondary" (click)="takepicture()" [style.display]="showcamera ? null : 'none' ">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-record-circle"
+      viewBox="0 0 16 16">
+      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+      <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+    </svg>
+    </a>
+
+    <a class="link-secondary" (click)="startvideo()" [style.display]="showvideo ? null : 'none' ">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-record-circle"
+        viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+        <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+      </svg>
+    </a>
+
+    <a class="link-secondary" (click)="stopvideoRecording()" [style.display]="stopvideo ? null : 'none' ">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-stop-circle"
+        viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+        <path d="M5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5z" />
+      </svg>
+    </a>
+
+
+
+    <a class="link-secondary" (click)="uploadVideo()" [style.display]="showvideoRecorded ? null : 'none' ">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cloud-arrow-up"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708z" />
+        <path
+          d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383m.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z" />
+      </svg>
+    </a>
+
+
+    <a class="link-secondary" (click)="ReadBarcodeFromImageFile()"
+      [style.display]="fileToUpload && showUpload  ? null : 'none'">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-upc-scan"
+        viewBox="0 0 16 16">
+        <path
+          d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5M3 4.5a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0zm2 0a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0zm2 0a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0zm2 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0z" />
+      </svg>
+    </a>
+    <a class="link-secondary" (click)="ReadBarcode()" [style.display]="showCropper ? null : 'none'">
+      <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-upc-scan"
+        viewBox="0 0 16 16">
+        <path
+          d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5M3 4.5a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0zm2 0a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0zm2 0a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0zm2 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0z" />
+      </svg>
+    </a>
+    <a class="link-secondary" (click)="discardFile()" [style.display]="showUpload ? null : 'none'">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-plus" viewBox="0 0 16 16">
+        <path d="M8.5 6a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V10a.5.5 0 0 0 1 0V8.5H10a.5.5 0 0 0 0-1H8.5z"/>
+        <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1"/>
+      </svg>
+    </a>
+
+    <a class="link-secondary" (click)="discardpicture()" [style.display]="showCropper? null : 'none'">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-trash py-1"
+      viewBox="0 0 16 16">
+      <path
+        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+      <path
+        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+    </svg>
+    </a>
+    <a class="link-secondary" (click)="discardvideo()" [style.display]="showvideoRecorded? null : 'none'">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-trash py-1"
+        viewBox="0 0 16 16">
+        <path
+          d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+        <path
+          d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+      </svg>
+    </a>
+
   </div>
-  <div [style.display]="fileToUpload && showUpload  ? null : 'none'">
-    <div class="input-group py-1">
-      <input type="text" [ngModel]="barcode" name="ReadBarcode1" class="form-control" placeholder="No barcode">
-      <button type="button" class="btn btn-secondary" (click)="ReadBarcodeFromImageFile()">Read Barcode</button>
-    </div>
-  </div>
-
-  <div [style.display]="showCropper ? null : 'none'">
-
-    <div class="input-group py-1">
-      <input type="text" [ngModel]="barcode" name="ReadBarcode2" class="form-control" placeholder="No code">
-      <button type="button" class="btn btn-secondary" (click)="ReadBarcode()">Read Barcode</button>
-    </div>
-
-  </div>
-
-
 
 
 
@@ -105,4 +159,6 @@
       <div class="d-block d-sm-none" style="height: 3em;"></div>
     </div>
   </div>
+
+  
 </div>
