--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,21 +35,18 @@
 
 
   <div class="row justify-content-center">
-
-    <video id="video" [style.display]="showcamera ? null : 'none'" class="video1">
-      <style>
-        iframe{
-          border: none;
-        }
-      </style>
-      Video stream
-      not available.</video>
-    <canvas id="mycanvas" [style.display]="showCropper? null : 'none'"></canvas>
-
+    <video id="video" [style.display]="showcamera ? null : 'none'" class="video1"> Video stream  not available.</video>
     <video autoplay playsinline id="videoLive" [style.max-width.px]="width" [style.max-height.px]="height"
-      [style.display]="showvideo || stopvideo? null : 'none' "></video>
-    <video controls playsinline id="videoRecorded" [style.display]="showvideoRecorded ? null : 'none' "></video>
-    <img id="myFilecanvas" [style.display]="fileToUpload && showUpload? null : 'none'" class="img-fluid py-1" />
+    [style.display]="showvideo || stopvideo? null : 'none' "></video>
+  <video controls playsinline id="videoRecorded" [style.display]="showvideoRecorded ? null : 'none' "></video>
+  <img id="myFilecanvas" [style.display]="fileToUpload && showUpload? null : 'none'" class="img-fluid py-1" />
+  <canvas id="mycanvas" class="img-fluid" [style.display]="showCropper? null : 'none'"></canvas>
+<!-- <div class="cam">
+
+    
+
+
+    </div>   -->
   </div>
 
   <div class="d-flex gap-2 justify-content-center">
@@ -60,6 +57,8 @@
 
     <input type="text" [ngModel]="barcode" name="ReadBarcode1" class="form-control" placeholder="No barcode"
       [style.display]="showBarcode ? null : 'none'">
+      <input type="text" [ngModel]="fileName" id="myfileName"  name="fileName1" class="form-control" placeholder="Video name"
+      [style.display]="showvideoRecorded ? null : 'none'">
 
 
     <a class="link-secondary" (click)="switchCam()"
